commented out a testcase, moved to standard layout
git-svn-id: https://svn.apache.org/repos/asf/jakarta/commons/sandbox/jci/trunk@430989 13f79535-47bb-0310-9956-ffa450edef68